# omfileformatc-rs

./: .gitmodules  Cargo.toml  Cross.toml  Makefile  README.md  build.rs
.cargo/: config.toml
.github/workflows/: test.yml
src/: lib.rs
