[package]
name = "omfileformatc-rs"
version = "0.0.1"
edition = "2021"

build = "build.rs"

categories = ["compression", "encoding"]
description = "OmFileFormatC rust bindings"
include = [
    "open-meteo/Sources/OmFileFormatC/include/**/*.h",
    "open-meteo/Sources/OmFileFormatC/src/**/*.c",
    "src/**/*",
    "Cargo.toml",
    "build.rs",
    "README.md",
]
license = "GPL-2.0-or-later"

# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = "0.2"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm32-unknown-unknown-openbsd-libc = "0.2"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = "0.69.4"
